resources/css/custom.css
body {
    background-color: #efefef !important;
}
.single-blog {
    box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
    padding: 10px;
    margin-top: 30px;
    background-color: #fff;
}
.single-blog img {
    width: 100%;
}
.blog-meta {
    font-size: 14px;
    margin-bottom: 2px;
}
.single-blog span {
    float: right;
    font-size: 12px;
    color: cornflowerblue;
}
.blog-text {
    font-size: 14px;
    text-align: justify;
}
.single-blog h2 {
    margin-top: 10px;
    font-size: 16px;
    color: #007bff;
}
.single-blog h2 a {
    text-decoration: none;
}
.read-more-btn {
    background-image: linear-gradient(to right, #1c03b5, #5c8bef);
    padding: 5px 12px 8px;
    border-radius: 20px;
    line-height: 20px;
    font-size: 14px;
    color: #fff;
    border: none!important;
}
.read-more-btn:hover {
    background-image: linear-gradient(to right, #006417, #00b128);
    text-decoration: none;
    color: #fff;
}
.navbar
{
    border-top:3px solid #F48024;
    border-bottom: 1px solid #ddd;
}

#suggested-widget {
    height: 104px;
    width: 192px;
}

.nav-bar-logo {
    height: 40px;
}

.mt-60 {
    margin-top: 60px !important;
}

.mt-100 {
    margin-top: 100px !important;
}

